# real

./: README.txt  configure  pack.pl
c/: real.c  real.h
configs/: Makefile.in  configure  configure.in
doc/: Changes.txt  Issues.txt  real.html
examples/: for_real.pl  test_real.pl
examples/ws_hist/: readme.txt  swipl-ws_hist  ws_hist.pl
prolog/: real.pl
